--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
     "koa": "^3.1.1",
+    "oxlint": "^1.0.0",
     "rxjs": "^7.8.0",
     "supertest": "^7.2.2",
     "typescript": "^5.7.2",
